<resources>
    <string name="app_name">ToDo app</string>
    <string name="to_do">To-do</string>
    <string name="everyday_tasks">Everyday tasks</string>
    <string name="statistics">Statistics</string>
    <string name="delete_task">DELETE TASK</string>
    <string name="add_task">ADD TASK</string>
    <string name="enter_your_task">Enter your task</string>
    <string name="studying">Studying</string>
    <string name="sport">Sport</string>
    <string name="social">Social</string>
    <string name="hobbies">Hobbies</string>
    <string name="choose_the_type">Choose the type of your task:</string>
    <string name="submit">SUBMIT</string>
    <string name="customize_your_task">ADDING TASK</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="to_do_list">TO-DO LIST</string>
</resources>