<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="30dp"
    tools:context=".addTaskFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvAddTask"
        android:layout_width="348dp"
        android:layout_height="558dp"
        app:cardCornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/etEnterTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enter_your_task"
                android:inputType="text"
                android:textSize="28sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.441"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.097" />

            <RadioGroup
                android:id="@+id/rgTypes"
                android:layout_width="256dp"
                android:layout_height="206dp"
                android:layout_marginStart="23dp"
                android:layout_marginEnd="78dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/rbTypeStudying"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/studying"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/rbTypeSport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sport"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/rbTypeSocial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/social"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/rbTypeHobbies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hobbies"
                    android:textSize="20sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/tvChooseType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_the_type"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.09"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.245" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textSize="24sp"
                app:cornerRadius="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.901" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvAddTaskHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customize_your_task"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />
</androidx.constraintlayout.widget.ConstraintLayout>